# myweatherapp

./: .gitignore  AGENTS.md  README.md  i18n.py  main.py  pyproject.toml  weather.py
locales/: en.json  pl.json
tests/: test_weather.py
