[project]
name = "weather"
version = "0.1.0"
description = "Interactive historical temperature trend dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "pandas>=2.2,<3",
    "pandas-stubs~=2.3.3",
    "plotly>=5.24,<7",
    "scipy>=1.14,<2",
    "scipy-stubs~=1.18.0",
    "streamlit>=1.40,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
